--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Autobiografia estudiantil</h1>
         <strong>Nací el 8 de abril del 2004 en Colombia. Creci al lado de mis padres en la ciudad de palmira, mi primer colegio fue uno el cual se llamaba liconsa, estudie alli hasta el grado tercero, luego me cambiaron de colegio y me matricularon en La milagrosa.
         
-Cuando empece a estudiar en La Milagrosa no me iba muy bien, pero poco a poco fui mejorando hasta que me empezo a ir bien, estudie toda mi primaria alli, luego mis padres pensaron en cambiarme de colegio pero al final decidieron que lo mejor era quedarme alli mismo. El bachiller se me hizo un poco dificilñ sobre todo en sexto ya que eran temas nuevos y un am,biente diferente pero de igualmanera me acostumbre y ya no me casi no me cuesta los temas que se dan.
+Cuando empece a estudiar en La Milagrosa no me iba muy bien, pero poco a poco fui mejorando hasta que me empezo a ir bien, estudie toda mi primaria alli, luego mis padres pensaron en cambiarme de colegio pero al final decidieron que lo mejor era quedarme alli mismo. El bachiller se me hizo un poco dificil sobre todo en sexto ya que eran temas nuevos y un am,biente diferente pero de igualmanera me acostumbre y ya no me casi no me cuesta los temas que se dan.
 
 Actualmente sigo estudiando en el mismo colegio y me va bien, este colegio me ha parecido bueno en muchos sentidos, por lo que pienso graduarme en el.
         
